--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
     <div class="container">
         <h1>Welcome To Rental Bike Share Prediction Web App</h1>
         <h2>Let's Predict</h2>
+        <br>
+        <h3>Please click on the Form :</h3>
+    <a href="/predictdata" >Form</a>
     </div>
 </body>
 </html>
